@@ -58,89 +58,8 @@ class MembershipTool( BaseTool ):
     __implements__ = (IMembershipTool, ActionProviderBase.__implements__)
 
     meta_type = 'Default Membership Tool'
-    _actions = (
-      AI( id='login'
-        , title='Login'
-        , description='Click here to Login'
-        , action=Expression(text='string:${portal_url}/login_form')
-        , permissions=(View,)
-        , category='user'
-        , condition=Expression(text='not: member')
-        , visible=1
-        )
-    , AI( id='preferences'
-        , title='Preferences'
-        , description='Change your user preferences'
-        , action=Expression(text='string:${portal_url}/personalize_form')
-        , permissions=(View,)
-        , category='user'
-        , condition=Expression(text='member')
-        , visible=1
-        )
-    , AI( id='logout'
-        , title='Log out'
-        , description='Click here to logout'
-        , action=Expression(text='string:${portal_url}/logout')
-        , permissions=(View,)
-        , category='user'
-        , condition=Expression(text='member')
-        , visible=1
-        )
-    , AI( id='addFavorite'
-        , title='Add to favorites'
-        , description='Add this item to your favorites'
-        , action=Expression(text='string:${object_url}/addtoFavorites')
-        , permissions=(View,)
-        , category='user'
-        , condition=Expression(text= 'portal/portal_membership'
-                                   + '/getHomeFolder')
-        , visible=1
-        )
-    , AI( id='mystuff'
-        , title='My stuff'
-        , description='Goto your home folder'
-        , action=Expression(text='string:${portal/portal_membership'
-                               + '/getHomeUrl}/folder_contents')
-        , permissions=(View,)
-        , category='user'
-        , condition=Expression( text='python: member and '
-                              + 'portal.portal_membership.getHomeFolder()')
-        , visible=1
-        )
-    , AI( id='favorites'
-        , title='My favorites'
-        , description='Browse your favorites'
-        , action=Expression(text='string:${portal/portal_membership'
-                               + '/getHomeUrl}/Favorites/folder_contents')
-        , permissions=(View,)
-        , category='user'
-        , condition=Expression( text='python: member and '
-                                   + 'hasattr(portal.portal_membership.'
-                                   +  'getHomeFolder(), "Favorites")')
-        , visible=1
-        )
-    , AI( id='manage_members'
-        , title='Manage members'
-        , description='Manage portal members'
-        , action=Expression(text='string:${portal_url}/members_manage_form')
-        , permissions=(ManageUsers,)
-        , category='global'
-        , condition=None
-        , visible=1
-        )
-    , AI( id='logged_in'
-        , title='Logged in'
-        , description='Used by scripts'
-        , action=Expression(text='string:${portal_url}/logged_in')
-        , permissions=(View,)
-        , category='user'
-        , condition=None
-        , visible=0
-        )
-    )
-
+    _actions = ()
     membersfolder_id = 'Members'
-
     security = ClassSecurityInfo()
 
     #
