@@ -39,19 +39,7 @@ class RegistrationTool(BaseTool):
     __implements__ = BaseTool.__implements__
 
     meta_type = 'Default Registration Tool'
-    _actions = ( ActionInformation( id='join'
-                                  , title='Join'
-                                  , description='Click here to Join'
-                                  , action=Expression(
-                                     text='string:${portal_url}/join_form')
-                                  , permissions=(AddPortalMember,)
-                                  , category='user'
-                                  , condition=Expression(text='not: member')
-                                  , visible=1
-                                  )
-               ,
-               )
-
+    _actions = ()
     security = ClassSecurityInfo()
 
     #
