@@ -76,6 +76,15 @@ HEAD only (unreleased)
 
   Others
 
+    - Remove all "old-style" actions from tools that still carried them 
+      (CMFDefault.MembershipTool, CMFDefault.PropertiesTool, 
+      CMFDefault.RegistrationTool, CMFDefault.SyndicationTool,
+      CMFDefault.DiscussionTool, CMFCore.UndoTool). These have been
+      superceded by "new-style" action information objects stored inside
+      the Actions Tool.
+
+    - TypesTool: Removed deprecated by_metatype argument of listContentTypes.
+
     - Some simplifications to the slurp_release release helper script and
       updates to the RELEASE.txt release instructions.
 
